--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.64.138.145, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2, server: 38.114.114.69, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 波兰-831.0KB/s(Youtube:不良林), server: 217.30.10.65, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.86.135.27, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-487.8KB/s(Youtube:不良林), server: 38.114.114.19, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-464.2KB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-657.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 38.114.114.49, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-870.7KB/s(Youtube:不良林), server: 38.114.114.67, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.69MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.86.135.27, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.68.135.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 波兰-831.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-487.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 波兰-831.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-487.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 波兰-831.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-487.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 波兰-831.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-487.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 波兰-831.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-487.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 波兰-831.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-487.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.09MB/s(Youtube:不良林) 2
-      - 波兰-831.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-487.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-464.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-657.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
+      - 🇺🇸 美国-870.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.69MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
