--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇳🇱 荷兰-2.12MB/s(Youtube:不良林), server: 213.183.59.190, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: 38.114.114.69, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-2.84MB/s(Youtube:不良林), server: 38.114.114.67, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇳🇱 荷兰-2.87MB/s(Youtube:不良林), server: 185.246.155.29, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 波兰-744.8KB/s(Youtube:不良林), server: 217.30.10.65, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.68.135.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.64.138.145, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.86MB/s(Youtube:不良林), server: 38.114.114.69, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.64.138.145, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 38.86.135.27, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: 38.68.135.19, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: vus3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus3.0bad.com}}
-  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: 51.81.223.25, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.87MB/s(Youtube:不良林)
+      - 波兰-744.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.87MB/s(Youtube:不良林)
+      - 波兰-744.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.87MB/s(Youtube:不良林)
+      - 波兰-744.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.87MB/s(Youtube:不良林)
+      - 波兰-744.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.87MB/s(Youtube:不良林)
+      - 波兰-744.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.87MB/s(Youtube:不良林)
+      - 波兰-744.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.84MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.87MB/s(Youtube:不良林)
+      - 波兰-744.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
