--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.51MB/s(Youtube:不良林), server: 213.183.59.229, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: 38.64.138.145, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-619.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇳🇱 荷兰-947.2KB/s(Youtube:不良林), server: 213.183.59.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-206.6KB/s(Youtube:不良林), server: 38.114.114.69, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-2.44MB/s(Youtube:不良林), server: 38.75.136.135, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇳🇱 荷兰-574.3KB/s(Youtube:不良林), server: 213.183.59.229, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇺🇸 美国-730.2KB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-318.6KB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-1.09MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.21MB/s(Youtube:不良林), server: 38.75.136.102, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-1.88MB/s(Youtube:不良林), server: 38.68.135.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 38.68.135.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 38.114.114.69, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: vus3.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus3.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-619.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-574.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-619.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-574.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-619.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-574.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-619.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-574.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-619.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-574.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-619.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-574.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-619.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-206.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.44MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-574.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-318.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.09MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.21MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
